# rl-utilities

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
rl_utilities/: __init__.py  affine_map.py  rolling_tensor.py  squish_functions.py  td_normalizer.py  welford_running_stats.py
rl_utilities/loggers/: __init__.py  composite_logger.py  rl_data_logger.py
rl_utilities/nn_factories/: __init__.py  ffnn_factory.py  glu_factory.py
rl_utilities/running_stats/: __init__.py  base_running_statistics.py  exponential_moving_average.py  welford_running_stats.py
rl_utilities/torch_modules/: __init__.py  asgd.py  focal_loss.py  gated_linear_unit.py  gaussian_head.py  lyam.py  quantile_distribution.py  quantile_head.py  quantile_loss.py
