[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-utilities"
version = "0.1.0"
authors = [
    {name = "Matt", email = "your-email@example.com"},
]
description = "A flexible collection of utilities for reinforcement learning projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["reinforcement learning", "machine learning", "utilities", "logging", "statistics"]
dependencies = [
    "torch>=1.7.0",
]

[project.optional-dependencies]
full = [
    "numpy>=1.19.0",
    "wandb>=0.12.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/rl-utilities"
Repository = "https://github.com/yourusername/rl-utilities"
Issues = "https://github.com/yourusername/rl-utilities/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_utilities*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
